# movie-club-bot

./: .gitignore  Procfile  app.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
movie/: settings.py
web/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
web/management/commands/: cron.py  fetch_imdb.py  telegram.py  upgrade_users.py
web/migrations/: 0002_moviesuggestion_imdb_update.py  0003_telegramgroup.py  0004_telegramgroup_count.py  0005_inpersonmoviesuggestion.py  0006_inpersonmoviesuggestion_showing_type.py  0007_alter_inpersonmoviesuggestion_meta_and_more.py  0008_alter_inpersonmoviesuggestion_showing_type_and_more.py  0009_alter_inpersonmoviesuggestion_attendees.py  0010_alter_inpersonmoviesuggestion_attendees.py  0011_telegramgroup_uuid.py  0012_inpersonmoviesuggestion_processed.py  0013_userdata.py  0014_companyinformation_inpersonmoviesuggestion_tmdb_id_and_more.py  0015_productioncountry_and_more.py  0016_alter_companyinformation_name.py
web/templates/: add_irl.html  base.html  cinematch.html  dalle.html  home.html  list.html  list_by_company.html  list_by_country.html  schedule.html  schedule.ics  stats.html
