
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "movie-club-bot"
version = "1.0.0"
dependencies = ["Django==4.2.1", "beautifulsoup4==4.11.1", "django-heroku==0.3.1", "gunicorn==20.1.0", "isodate==0.6.1", "openai==0.27.0", "pyTelegramBotAPI==4.8.0", "sentry-sdk==1.21.1", "psutil", "tiktoken"]
requires-python = ">=3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
